# Projet_CUDA

./: .cproject  .gitignore  .project  CMakeLists.txt  Makefile  Makefile.save  Project.cbp  README.md  cmake_install.cmake  generer_probleme_pigeons.sh  gpu_satisfy  makefile  pb_pigeons_10_9.txt  pb_pigeons_14_15.txt  pb_pigeons_16_15.txt  pb_pigeons_1_1.txt  pb_pigeons_25_25.txt  pb_pigeons_2_1.txt  pb_pigeons_2_2.txt  pb_pigeons_2_3.txt  pb_pigeons_3_3.txt  pb_pigeons_3_4.txt  pb_pigeons_45_50.txt  pb_pigeons_4_3.txt  pb_pigeons_4_5.txt  pb_pigeons_5_4.txt  pb_pigeons_5_5.txt  pb_pigeons_6_5.txt  pb_pigeons_8_8$.txt  pb_pigeons_8_8.txt  pb_pigeons_9_8.txt  pb_pigeons_9_9.txt  satisfy  test_some_gpu.sh  tester.sh
data/: gpu_25_25  gpu_2_1  gpu_2_2  gpu_45_50  gpu_4_3  gpu_5_4  gpu_6_5  gpu_8_8  gpu_9_8
src/: Atome.cpp  Atome.h  Formule.cpp  ResolutionStructure.h  Solver.cpp  Solver.h  cpu_test.cpp  cpu_timer.cpp  cpu_timer.h  file.cpp  file.h  gpu_defines.h  gpu_parse_file.cu  gpu_parse_file.h  gpu_timer.cu  gpu_timer.h  matrix_gen.cpp  matrix_gen.h  my_cuda.h  satisfy.cpp  satisfy2.cpp  satisfy_para.cu  solver.cu  struct_satisfy.h
src/CuME/: cume.h  cume_array.h  cume_base.cu  cume_base.h  cume_cpu_timer.cpp  cume_cpu_timer.h  cume_devices.cu  cume_devices.h  cume_gpu_timer.cu  cume_gpu_timer.h  cume_kernel.cu  cume_kernel.h  cume_matrix.h  cume_pinned_array.h  cume_variable.h  cume_zero_copy_array.h
src/ModelePropositionnel/: Atome.cpp  Formule.cpp  Formule.h
src/Utilities/: file.cpp
